--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@auth0/auth0-react": "^1.12.0",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@mui/icons-material": "^5.11.0",
@@ -10,13 +11,20 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.2.1",
+    "cheeseburger-menu": "^0.0.13",
     "prettier": "^2.7.1",
     "react": "^17.0.2",
+    "react-burger-menu": "^3.0.8",
     "react-dom": "^17.0.2",
+    "react-hamburger-menu": "^1.2.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.1",
+    "react-slide-menu": "^0.5.1",
     "styled-components": "^5.3.5",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "three": "^0.126.0",
+    "three-mtl-loader": "^1.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
